--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
   {{title}}
 </h1>
+<app-audio-clock></app-audio-clock>
+
+<app-sequencer-track [file]="'../assets/samples/E-Mu-Proteus-FX-909-Kick.wav'"></app-sequencer-track>
+<app-sequencer-track [file]="'../assets/samples/Hip-Hop-Snare-1.wav'"></app-sequencer-track>
+<app-sequencer-track [file]="'../assets/samples/Closed-Hi-Hat-1.wav'"></app-sequencer-track>
